Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.6, 5.11.0, 5.12
-
-
f9e4402ffeef791e66b7b2f2cc332000df7f5cd4 f302a224fa (qt/tqtc-qtbase/6.3) ecfcb72756 (qt/tqtc-qtbase/6.2) 290b405872 (qt/qtbase/5.15)
Description
setting the flag Qt::WindowStaysOnTopHint at runtime does not always work if it works then unsetting same flag still shows windows on top.
Some time the widget will not stay on top, although the flag is set. It will disappear when click outside the application, or can be overlapped (z-order) by another widgets.
This can be easily reproducible with Qt's windowflags example:
https://doc.qt.io/qt-5/qtwidgets-widgets-windowflags-example.html
Attachments
Issue Links
- is duplicated by
-
QTBUG-81341 Window won't receive events above Gnome Dock despite X11ByPassWindowManager + WindowsStaysOnTop is set
-
- Closed
-
- is required for
-
QTBUG-56893 Closing a dialog via mouse click on a button causes an XCB error
-
- Closed
-
- relates to
-
QTBUG-73485 Issue with Qt::WindowStaysOnTopHint
-
- Closed
-
-
QTBUG-42939 [X11]: When toggling the visibility of a dialog it will cause it to shift up and to the left after each showing of it
-
- Closed
-
- resulted in
-
QTBUG-101347 QMainWindow Menu / actions sometimes not displayed when performing long operations
-
- Closed
-
-
QTBUG-106033 Setting Qt::WindowStaysOnTopHint/Qt::WindowStaysOnBottomHint breaks winId
-
- Closed
-
-
QTBUG-99810 [REG: 5.15.5->5.15.6] xcb: Dock widgets disappear if trying to float them from QMainWindow that contains native window
-
- Closed
-
-
QTBUG-108407 Redraw issues in VLC and Virtualbox and Qt 5.15.6
-
- Closed
-